Polishes scribe module
This fixes the maven configuration of scribe resulting in a module jar
less than half a meg. Besides reformatting files, it fixes a couple
glitches: `Unknown channel option 'SO_BACKLOG'` in logs, and some areas
where fatal errors weren't propagated (however unlikely).

Tested under load with no errors or dropped messages.